Update and rename README.md to README.html

--- a/README.html
+++ b/README.html
@@ -1,9 +1,9 @@
 # WTFullstack-1-Site-TelegramBot-AdminConsole
 
-Моя первая проба реализовать Fullstack сервис. 
+<b>Моя первая проба реализовать Fullstack сервис. 
 За основу front взят html/css/js шаблон из открытых источников:
 https://www.free-css.com/free-css-templates/page254/minimalista
 Я реструктурировал это в лендинг и заменил почти весь контент на go-template
 БД на основе json пакетов в паапке data.
 Внутри data/config.json устанавливаются стартовые параметры сервиса.
-Управление сервисом производится через Телеграм Бота.
+  Управление сервисом производится через Телеграм Бота.</b>
